fix overflow

--- a/new.css
+++ b/new.css
@@ -28,7 +28,7 @@ main{
     /* margin: 0% 10%; */
     padding: 0% 10%;
     overflow: hidden;
-    height: 100%;
+    /* height: 100%; */
     position: relative;
     /* box-sizing: content-box; */
 }
